2007-06-04  Richard Dale  <rdale@foton.es>

	* Added the QBitArray class for completeness

2007-06-03  Richard Dale  <rdale@foton.es>

	* Fixed implicit type conversions code for non-QtCore classes to QVariants

2007-06-02  Richard Dale  <rdale@foton.es>

	* Updated the uics tool against the Qt 4.3 sources
	* Changed the code generation to generate properties for QDOC_PROPERTY
	  macros
	* Added a space after the '///'s for the documentation tags so that they
	  have Kate syntax highlighting
	* Added a string to QKeySequence implicit type conversion

2007-06-02  Arno Rehn  <arno@arnorehn.de>

	* Special cased the QCoreApplication constructor, too.
	* Added AssemblyInfo.cs
	* Added a keyfile for strong naming the qt-dotnet assembly so it can
	  be added to the GAC. It won't be generated at compile time since there
	  might occur problems when it is regenerated and the assembly is reinstalled.
	* Added rules in CMakeLists.txt for installing libqyoto.so.
	* Added rules in CMakeLists.txt for installing qt-dotnet.dll into the GAC.

2007-06-01  Arno Rehn  <arno@arnorehn.de>

	* Special cased the QApplication constructor call to work correctly

2007-05-31  Arno Rehn  <arno@arnorehn.de>

	* Added a hack in uics for QFrame.Shape and QFrame.Shadow

2007-05-31  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto sources from the release version of Qt 4.3

2007-05-29  Richard Dale  <rdale@foton.es>

	* Try Arno's suggestion of 'return (int) (qint64) o->ptr;' in the
	  QyotoHash f'n to make it compile on all architectures.

2007-05-28  Arno Rehn  <arno@arnorehn.de>

	* Updated the code of the first tutorials to be more like C++ ones.

2007-05-28  Richard Dale  <rdale@foton.es>

	* Further simplified the marshalling of primitive reference types. As
	  a pointer the the value on the C# stack is copied to the smoke stack 
	  before the method call, the value after the method call doesn't need
	  to be copied back.
	* Added a marshaller for 'short&' and 'short*' arg types