@@ -3,30 +3,19 @@ OPTION(ENABLE_QYOTO "build Qyoto" ON)
 set(QYOTO_ENABLED "no")
 
 if(ENABLE_QYOTO)
-    # find 'gmcs'
-    MESSAGE (STATUS "Looking for gmcs")
-    FIND_PROGRAM (GMCS_PATH gmcs)
-    IF (NOT GMCS_PATH)
-        MESSAGE (STATUS "Looking for gmcs - not found.")
+    FIND_PACKAGE (Mono)
+    IF (NOT GMCS_EXECUTABLE)
         MESSAGE (STATUS "gmcs was not found on your system but is needed for Qyoto. Disabling Qyoto.")
-    ELSE (NOT GMCS_PATH)
-        MESSAGE (STATUS "Looking for gmcs - found - ${GMCS_PATH}")
-    ENDIF (NOT GMCS_PATH)
+    ENDIF (NOT GMCS_EXECUTABLE)
 
-    # find 'gacutil'
-    MESSAGE (STATUS "Looking for gacutil")
-    FIND_PROGRAM (GACUTIL_PATH gacutil)
-    IF (NOT GACUTIL_PATH)
-        MESSAGE (STATUS "Looking for gacutil - not found.")
+    IF (NOT GACUTIL_EXECUTABLE)
         MESSAGE (STATUS "gacutil was not found on your system but is needed for Qyoto. Disabling Qyoto.")
-    ELSE (NOT GACUTIL_PATH)
-        MESSAGE (STATUS "Looking for gacutil - found - ${GACUTIL_PATH}")
-    ENDIF (NOT GACUTIL_PATH)
+    ENDIF (NOT GACUTIL_EXECUTABLE)
 
-    IF (GMCS_PATH AND GACUTIL_PATH)
+    IF (GMCS_EXECUTABLE AND GACUTIL_EXECUTABLE)
         add_subdirectory( qyoto )
         set(QYOTO_ENABLED "yes")
-    ENDIF (GMCS_PATH AND GACUTIL_PATH)
+    ENDIF (GMCS_EXECUTABLE AND GACUTIL_EXECUTABLE)
 endif(ENABLE_QYOTO)
 
 message(STATUS "Build Qyoto... " ${QYOTO_ENABLED})
