@@ -1,6 +1,7 @@
 SET(SRC_CS_PING ${CMAKE_CURRENT_SOURCE_DIR}/complexping.cs)
-ADD_CUSTOM_TARGET (complexping.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:complexping.exe -r:../../../qt-dotnet.dll ${SRC_CS_PING} COMMENT "Building complexping.exe")
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(complexping "${SRC_CS_PING}" ALL)
 
 SET(SRC_CS_PONG ${CMAKE_CURRENT_SOURCE_DIR}/complexpong.cs)
-ADD_CUSTOM_TARGET (complexpong.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:complexpong.exe -r:../../../qt-dotnet.dll ${SRC_CS_PONG} COMMENT "Building complexpong.exe")
-
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(complexpong "${SRC_CS_PONG}" ALL)
