@@ -1,7 +1,6 @@
 SET(UI_CONTROLLER ${CMAKE_CURRENT_SOURCE_DIR}/controller.ui)
-ADD_CUSTOM_TARGET(ui_controller.cs ALL ${UICS_PATH} ${UI_CONTROLLER} -o ui_controller.cs COMMENT "Building ui_controller.cs")
+ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/ui_controller.cs COMMAND ${UICS_EXECUTABLE} ${UI_CONTROLLER} -o ui_controller.cs COMMENT "Generating ui_controller.cs")
 
 SET(SRC_CS_CONTROLLER ${CMAKE_CURRENT_SOURCE_DIR}/main.cs  ${CMAKE_CURRENT_BINARY_DIR}/ui_controller.cs  ${CMAKE_CURRENT_SOURCE_DIR}/controller.cs)
-ADD_CUSTOM_TARGET (controller.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:controller.exe -r:../../../../qt-dotnet.dll ${SRC_CS_CONTROLLER} COMMENT "Building controller.exe")
-
-ADD_DEPENDENCIES(controller.exe ui_controller.cs)
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(controller "${SRC_CS_CONTROLLER}" ALL)
