@@ -1,3 +1,3 @@
 SET(SRC_T13 ${CMAKE_CURRENT_SOURCE_DIR}/cannonfield.cs ${CMAKE_CURRENT_SOURCE_DIR}/gameboard.cs ${CMAKE_CURRENT_SOURCE_DIR}/lcdrange.cs ${CMAKE_CURRENT_SOURCE_DIR}/main.cs)
-ADD_CUSTOM_TARGET (t13.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t13.exe -r:../../../qt-dotnet.dll ${SRC_T13} COMMENT "Building t13.exe")
-
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(t13 "${SRC_T13}" ALL)
