@@ -1,3 +1,3 @@
 SET(SRC_T3 ${CMAKE_CURRENT_SOURCE_DIR}/t3.cs)
-ADD_CUSTOM_TARGET (t3.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t3.exe -r:../../../qt-dotnet.dll ${SRC_T3} COMMENT "Building t3.exe")
-
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(t3 ${SRC_T3} ALL)
