@@ -1,3 +1,3 @@
 SET(SRC_T4 ${CMAKE_CURRENT_SOURCE_DIR}/t4.cs)
-ADD_CUSTOM_TARGET (t4.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t4.exe -r:../../../qt-dotnet.dll ${SRC_T4} COMMENT "Building t4.exe")
-
+SET(CS_FLAGS -warn:0 -r:${LIBRARY_OUTPUT_PATH}/qt-dotnet.dll)
+ADD_CS_EXECUTABLE(t4 ${SRC_T4} ALL)
